syntax = "proto3";


option csharp_namespace = "gRPC.TaskManagement.Presentation";

service TaskItemService{
	rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
}


message CreateTaskRequest{
	string Name = 1;
	string Description = 2;
	Status Status= 3;
    Priority Priority = 4;
    int32 CategoryId = 5;
    int32 ProjectId = 6;

}

message CreateTaskResponse{
    int32 status = 1;
}


 enum Status
{
    Open =0;
    InProgress =1;
    Completed =2;
}


enum Priority
{
    High = 0;
    Medium = 1;
    Low = 2;
}